--- a/deploy/controller_config.yaml
+++ b/deploy/controller_config.yaml
@@ -4,7 +4,7 @@ metadata:
   name: che-workspace-controller
   namespace: che-workspace-controller
 data:
-  ingress.global.domain: 192.168.99.100.nip.io
-  plugin.registry.url: http://che-plugin-registry.192.168.99.100.nip.io/v3
+  ingress.global.domain: apps-crc.testing
+  plugin.registry.url: http://che-plugin-registry.apps-crc.testing/v3
   che.workspace.plugin_broker.artifacts.image: quay.io/eclipse/che-plugin-artifacts-broker:v3.1.0
   cherestapis.image.name: quay.io/dfestal/che-workspace-crd-rest-apis:newone
