--- a/deploy/registry/local/ingress.yaml
+++ b/deploy/registry/local/ingress.yaml
@@ -16,7 +16,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
 spec:
   rules:
-  - host: che-plugin-registry.192.168.99.100.nip.io
+  - host: che-plugin-registry.apps-crc.testing
     http:
       paths:
       - path: /
