fixup! Make OpenShift OAuth propagate OpenShift token
Signed-off-by: Sergii Leshchenko <sleshche@redhat.com>

--- a/deploy/exec-cluster-role.yaml
+++ b/deploy/exec-cluster-role.yaml
@@ -15,6 +15,7 @@ rules:
   resources:
     - pods/exec
   verbs:
+    #Revise which verbs do we really need
     - create
     - delete
     - deletecollection
