Create OAuthClient for OpenShift OAuth Proxy
Signed-off-by: Sergii Leshchenko <sleshche@redhat.com>

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -100,3 +100,15 @@ rules:
     - validatingwebhookconfigurations
   verbs:
     - '*'
+- apiGroups:
+  - oauth.openshift.io
+  resources:
+  - oauthclients
+  verbs:
+  - create
+  - get
+  - delete
+  - list
+  - patch
+  - update
+  - watch
