--- a/deploy/os/che-workspace-controller-cert-gen-deployment.yaml
+++ b/deploy/os/che-workspace-controller-cert-gen-deployment.yaml
@@ -11,6 +11,8 @@ spec:
     metadata:
       labels:
         app: che-workspace-controller-cert-gen
+        app.kubernetes.io/name: devworkspace-controller
+        app.kubernetes.io/part-of: devworkspace-controller
       annotations:
         kubectl.kubernetes.io/restartedAt: ""
     spec:
