Move mount path for certificates and add discovery functionality
- Move mount path for cluster certs to match expected path from OLM
- Add functionality to discover certificates and key
    - When mounted from a secret, certificate and key are stored in
      tls.key and tls.crt
    - When mounted by OLM automatically, they are stored in
      apiserver.crt and apiserver.key

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/deploy/k8s/controller-tls.yaml
+++ b/deploy/k8s/controller-tls.yaml
@@ -9,7 +9,7 @@ spec:
         - name: che-workspace-controller
           volumeMounts:
             - name: webhook-tls-certs
-              mountPath: /tmp/k8s-webhook-server/serving-certs
+              mountPath: /apiserver.local.config/certificates/
               readOnly: true
       volumes:
         - name: webhook-tls-certs
