--- a/deploy/os/controller.yaml
+++ b/deploy/os/controller.yaml
@@ -51,7 +51,7 @@ spec:
               containerPort: 8443
           volumeMounts:
             - name: webhook-tls-certs
-              mountPath: /tmp/k8s-webhook-server/serving-certs
+              mountPath: /apiserver.local.config/certificates/
               readOnly: true
       volumes:
         - name: webhook-tls-certs
