--- a/deploy/k8s/controller.yaml
+++ b/deploy/k8s/controller.yaml
@@ -3,15 +3,20 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: che-workspace-controller
+  labels:
+    app.kubernetes.io/name: devworkspace-controller
+    app.kubernetes.io/part-of: devworkspace-operator
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: che-workspace-controller
+      app.kubernetes.io/name: devworkspace-controller
+      app.kubernetes.io/part-of: devworkspace-operator
   template:
     metadata:
       labels:
-        app: che-workspace-controller
+        app.kubernetes.io/name: devworkspace-controller
+        app.kubernetes.io/part-of: devworkspace-operator
       annotations:
         kubectl.kubernetes.io/restartedAt: ""
     spec:
@@ -55,7 +60,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: che-workspace-controller
+    app.kubernetes.io/name: devworkspace-controller
+    app.kubernetes.io/part-of: devworkspace-operator
   name: workspace-controller
 spec:
   ports:
@@ -63,4 +69,5 @@ spec:
       protocol: TCP
       port: 443
   selector:
-    app: che-workspace-controller
+    app.kubernetes.io/name: devworkspace-controller
+    app.kubernetes.io/part-of: devworkspace-operator
