--- a/deploy/registry/local/k8s/ingress.yaml
+++ b/deploy/registry/local/k8s/ingress.yaml
@@ -13,6 +13,9 @@ metadata:
   name: che-plugin-registry
   annotations:
     kubernetes.io/ingress.class: nginx
+  labels:
+    app.kubernetes.io/name: che-plugin-registry
+    app.kubernetes.io/part-of: devworkspace-operator
 spec:
   rules:
   - host: che-plugin-registry.192.168.99.100.nip.io
