--- a/deploy/registry/local/service.yaml
+++ b/deploy/registry/local/service.yaml
@@ -11,7 +11,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: che-plugin-registry
+    app.kubernetes.io/name: che-plugin-registry
+    app.kubernetes.io/part-of: devworkspace-operator
   name: che-plugin-registry
 spec:
   ports:
@@ -19,4 +20,5 @@ spec:
       port: 8080
       targetPort: 8080
   selector:
-    app: che-plugin-registry
+    app.kubernetes.io/name: che-plugin-registry
+    app.kubernetes.io/part-of: devworkspace-operator
