--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -3,6 +3,9 @@ kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: che-workspace-controller
+  labels:
+    app.kubernetes.io/name: devworkspace-controller
+    app.kubernetes.io/part-of: devworkspace-operator
 subjects:
 - kind: ServiceAccount
   name: che-workspace-controller
