--- a/deploy/service_account.yaml
+++ b/deploy/service_account.yaml
@@ -3,3 +3,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: che-workspace-controller
+labels:
+  app.kubernetes.io/name: devworkspace-controller
+  app.kubernetes.io/part-of: devworkspace-operator
