--- a/config/components/rbac/role.yaml
+++ b/config/components/rbac/role.yaml
@@ -15,13 +15,25 @@ rules:
   - secrets
   - serviceaccounts
   verbs:
-  - create
-  - delete
+  - '*'
+- apiGroups:
+  - ""
+  resources:
+  - namespaces
+  verbs:
   - get
-  - list
-  - patch
-  - update
-  - watch
+- apiGroups:
+  - ""
+  resources:
+  - pods/exec
+  verbs:
+  - create
+- apiGroups:
+  - ""
+  resources:
+  - services
+  verbs:
+  - '*'
 - apiGroups:
   - admissionregistration.k8s.io
   resources:
@@ -37,15 +49,37 @@ rules:
   - watch
 - apiGroups:
   - apps
+  resourceNames:
+  - devworkspace-controller
+  resources:
+  - deployments/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - apps
+  - extensions
   resources:
   - deployments
   verbs:
-  - create
-  - delete
   - get
   - list
-  - patch
-  - update
+  - watch
+- apiGroups:
+  - apps
+  - extensions
+  resources:
+  - deployments
+  - replicasets
+  verbs:
+  - '*'
+- apiGroups:
+  - apps
+  - extensions
+  resources:
+  - replicasets
+  verbs:
+  - get
+  - list
   - watch
 - apiGroups:
   - batch
@@ -60,19 +94,13 @@ rules:
 - apiGroups:
   - controller.devfile.io
   resources:
-  - components
+  - '*'
   verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
+  - '*'
 - apiGroups:
   - controller.devfile.io
   resources:
-  - components/finalizers
+  - components
   verbs:
   - create
   - delete
@@ -94,25 +122,7 @@ rules:
   resources:
   - workspaceroutings
   verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - controller.devfile.io
-  resources:
-  - workspaceroutings/finalizers
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
+  - '*'
 - apiGroups:
   - controller.devfile.io
   resources:
@@ -134,29 +144,18 @@ rules:
   - update
   - watch
 - apiGroups:
-  - ""
-  resources:
-  - services
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
   - extensions
   resources:
   - ingresses
   verbs:
+  - '*'
+- apiGroups:
+  - monitoring.coreos.com
+  resources:
+  - servicemonitors
+  verbs:
   - create
-  - delete
   - get
-  - list
-  - patch
-  - update
-  - watch
 - apiGroups:
   - oauth.openshift.io
   resources:
@@ -188,42 +187,16 @@ rules:
   resources:
   - routes
   verbs:
+  - '*'
+- apiGroups:
+  - route.openshift.io
+  resources:
+  - routes/custom-host
+  verbs:
   - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
 - apiGroups:
   - workspace.devfile.io
   resources:
-  - devworkspaces
+  - '*'
   verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - workspace.devfile.io
-  resources:
-  - devworkspaces/finalizers
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - workspace.devfile.io
-  resources:
-  - devworkspaces/status
-  verbs:
-  - get
-  - patch
-  - update
+  - '*'
