--- a/config/components/rbac/auth_proxy_role_binding.yaml
+++ b/config/components/rbac/auth_proxy_role_binding.yaml
@@ -8,5 +8,5 @@ roleRef:
   name: proxy-role
 subjects:
 - kind: ServiceAccount
-  name: $(CONTROLLER_SERVICE_ACCOUNT)
+  name: default
   namespace: system
