--- a/samples/theia-nodejs.yaml
+++ b/samples/theia-nodejs.yaml
@@ -4,6 +4,7 @@ metadata:
   name: theia-nodejs
 spec:
   started: true
+  routingClass: 'openshift-oauth'
   template:
     projects:
       - name: project
