--- a/config/components/rbac/role_binding.yaml
+++ b/config/components/rbac/role_binding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: rolebinding
+  name: manager-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: role
+  name: manager-role
 subjects:
 - kind: ServiceAccount
-  name: $(CONTROLLER_SERVICE_ACCOUNT)
+  name: default
   namespace: system
