--- a/internal-registry/redhat-developer/web-terminal-dev/4.5.0/meta.yaml
+++ b/internal-registry/redhat-developer/web-terminal-dev/4.5.0/meta.yaml
@@ -29,8 +29,7 @@ spec:
       command: ["/go/bin/che-machine-exec",
                 "--authenticated-user-id", "$(DEVWORKSPACE_CREATOR)",
                 "--idle-timeout", "$(DEVWORKSPACE_IDLE_TIMEOUT)",
-                "--pod-selector", "controller.devfile.io/workspace_id=$(CHE_WORKSPACE_ID)",
-                "--use-bearer-token"]
+                "--pod-selector", "controller.devfile.io/workspace_id=$(CHE_WORKSPACE_ID)"]
       ports:
         - exposedPort: 4444
       env:
