Update makefile to use generator script
Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 devworkspace-crds
 config/crd/bases/workspace.devfile.io_devworkspaces.yaml
 config/crd/bases/workspace.devfile.io_devworkspacetemplates.yaml
+config/current
 testbin
 .vscode
 __debug_bin
