Reorganize templates for deploying controller
Rework file structure from

    config
    ├── <kustomize templates>
    ├── current (untracked; dev environment)
    └── static (static deployment files)
to
    deploy
    ├── current (untracked; dev environment)
    ├── deployment (static deployment files)
    └── templates (templates from which above dirs are generated
        └── <kustomize templates>
and adjust scripts to match.

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 devworkspace-crds
-config/crd/bases/workspace.devfile.io_devworkspaces.yaml
-config/crd/bases/workspace.devfile.io_devworkspacetemplates.yaml
-config/current
+deploy/templates/crd/bases/workspace.devfile.io_devworkspaces.yaml
+deploy/templates/crd/bases/workspace.devfile.io_devworkspacetemplates.yaml
+deploy/current
 testbin
 .vscode
 __debug_bin
