--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-deploy/deployment             linguist-generated=true
-deploy/templates/crd/bases    linguist-generated=true
+deploy/deployment/*             linguist-generated
+deploy/templates/crd/bases/*    linguist-generated
