Rename workspacerouting to DevWorkspaceRouting (dwr)

--- a/deploy/deployment/kubernetes/objects/devworkspaceroutings.controller.devfile.io.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/devworkspaceroutings.controller.devfile.io.CustomResourceDefinition.yaml
@@ -7,20 +7,23 @@ metadata:
   labels:
     app.kubernetes.io/name: devworkspace-controller
     app.kubernetes.io/part-of: devworkspace-operator
-  name: workspaceroutings.controller.devfile.io
+  name: devworkspaceroutings.controller.devfile.io
 spec:
   group: controller.devfile.io
   names:
-    kind: WorkspaceRouting
-    listKind: WorkspaceRoutingList
-    plural: workspaceroutings
-    singular: workspacerouting
+    kind: DevWorkspaceRouting
+    listKind: DevWorkspaceRoutingList
+    plural: devworkspaceroutings
+    shortNames:
+    - dwr
+    singular: devworkspacerouting
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: WorkspaceRouting is the Schema for the workspaceroutings API
+        description: DevWorkspaceRouting is the Schema for the devworkspaceroutings
+          API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -35,7 +38,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: WorkspaceRoutingSpec defines the desired state of WorkspaceRouting
+            description: DevWorkspaceRoutingSpec defines the desired state of DevWorkspaceRouting
             properties:
               endpoints:
                 additionalProperties:
@@ -136,7 +139,7 @@ spec:
             - workspaceId
             type: object
           status:
-            description: WorkspaceRoutingStatus defines the observed state of WorkspaceRouting
+            description: DevWorkspaceRoutingStatus defines the observed state of DevWorkspaceRouting
             properties:
               exposedEndpoints:
                 additionalProperties:
