--- a/samples/web-terminal-custom-tooling.yaml
+++ b/samples/web-terminal-custom-tooling.yaml
@@ -16,7 +16,7 @@ spec:
     components:
       - plugin:
           name: web-terminal
-          id: redhat-developer/web-terminal/4.5.0
+          id: redhat-developer/web-terminal/latest
       - container:
           memoryLimit: "256Mi"
           name: tooling
