--- a/samples/web-terminal.yaml
+++ b/samples/web-terminal.yaml
@@ -16,4 +16,4 @@ spec:
     components:
       - plugin:
           name: web-terminal
-          id: redhat-developer/web-terminal/4.5.0
+          id: redhat-developer/web-terminal/latest
